# CustomAssert

./: .gitignore  .gitmodules  CMakeLists.txt  CustomAssert.cpp  CustomAssert.h  Logger.h  Makefile
headers/: CustomAssert.h  Logger.h
src/: CustomAssert.cpp  Logger.cpp
